GRHB-665: * fixed row spacing

--- a/frontend/src/components/uam/components/groups-table/components/actions-cell/styles.module.scss
+++ b/frontend/src/components/uam/components/groups-table/components/actions-cell/styles.module.scss
@@ -2,4 +2,5 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  min-height: 56px;
 }
